Create UI of iOS, make works on real device iOS

--- a/iosApp/iosApp/Info.plist
+++ b/iosApp/iosApp/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -58,5 +60,9 @@
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Please Allow</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Please Allow</string>
+	<key>NSLocationUsageDescription</key>
+	<string>This application requires location to work.</string>
 </dict>
 </plist>
